io: add cia tod support

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -46,3 +46,4 @@
 - rework c64 reset logic
 - revamp cpu instruction tracing
 - revamp cpu interrupt tracking, fixes frogger freeze
+- landed cia tod
