--- a/TODO
+++ b/TODO
@@ -1,5 +1,18 @@
 # TODO
 
+cli module
+config module
+lib module
+add deviceio
+
+cpu
+cia
+vic
+review device module
+review loader module
+
+cia port observer call vic_memory set port a
+
 cartridge
 timer
 
