cpu: revise cpu clock emulation

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -57,3 +57,12 @@
 - landed sid
 - milestone 6: run musicirq.prg
 
+... LONG INTERMISSION ...
+
+### Week 6
+
+- landed compliant sid output
+
+### Week 7
+
+- landed improved cpu clock emulation
