--- a/TODO
+++ b/TODO
@@ -1,23 +1,15 @@
 # TODO
 
-remove sdl2 from libs
-cli module
-add deviceio
-vic
-review device module
-review loader module
-cartridge
-timer
+- remove sdl2 from libs
+- cli module
+- config module
+- review device module
+- review loader module
 
-- add system module with c64, spec, config
-- add logging to sid
-
-- video/vic/sprites
+- vic
 - monitor/telnet
+- ui/menus
 - time cycles for cia timer start to interrupt
-
-// DEFERRED cartridge: add more hardware types
-
 
 - https://forums.libsdl.org/viewtopic.php?t=6723&sid=23faf65c9e5db23708d5a1f7990165c3
 
