--- a/TODO
+++ b/TODO
@@ -8,6 +8,10 @@
 - s/cpu_irq/irq_line
 - reconcile use of flag (should be 1 instance)
 
+- document timer code
+- test performance of bitfield vs bit ops
+- write up interesting bugs
+
 - app: add screenshot support
 - app: add ui/menus
 - app: add debugger support
