project: update docs

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -107,3 +107,8 @@
 
 - landed vic border/graphics/sprite/mux units
 - milestone 11: run superball.prg
+
+### Week 16 - 20180721
+
+- refactoring and cleanup
+
