--- a/TODO
+++ b/TODO
@@ -1,6 +1,7 @@
 # TODO
 
-- fix warnings
+- app: fix warnings
+- input: fix joystick handling/default joystick
 - ci: add linux and windows builds
 - device: add floppy support
 - app: add screenshot support
