--- a/TODO
+++ b/TODO
@@ -1,5 +1,7 @@
 # TODO
 
+- add mouse support
+- add nostd support
 - device: add floppy support
 - app: add screenshot support
 - app: add ui/menus
