project: move emulator lib into zinc64-emu crate and change zinc64-sdl to root crate

--- a/TODO
+++ b/TODO
@@ -1,7 +1,8 @@
 # TODO
 
-- add mouse support
-- add nostd support
+- update ci
+- update readme
+- device: add mouse support
 - device: add floppy support
 - app: add screenshot support
 - app: add ui/menus
