--- a/TODO
+++ b/TODO
@@ -1,5 +1,14 @@
 # TODO
 
+init
+  exception
+  vectors
+
+util
+  geo
+  logger
+  reader
+
 - device: add mouse support
 - device: add floppy support
 - app: add screenshot support
